<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/app_bar_fav"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/action_favorite"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_settings"
        android:title="@string/action_settings"
        android:iconTint="@android:color/white"
        app:showAsAction="never"/>
</menu>